<resources>
    <string name="app_name">KeepFit</string>

    <!-- Tab names -->
    <string name="home_title">Home</string>
    <string name="goals_title">Goals</string>
    <string name="history_title">History</string>
    <string name="statistics_title">Statistics</string>

    <!-- Home strings -->
    <string name="set_goal">Set Goal</string>

    <!-- Goal item strings -->
    <string name="last_achieved">Last Achieved:</string>
    <string name="steps">steps</string>

    <!-- Goal editor strings -->
    <string name="enter_goal_name">Goal name</string>
    <string name="enter_goal_distance">Distance</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>

    <!-- Text displayed when there are no goals -->
    <string name="no_goals_icon">\'No goals\' icon</string>
    <string name="no_goals_main">You have no goals!</string>
    <string name="no_goals_add">Add a goal item +</string>

    <!-- Text displayed when there is no history -->
    <string name="no_history_main">There is no history</string>
    <string name="no_history_add">Start walking or go to \'Today\' tab to input steps</string>
    <string name="no_history_icon">Icon representing empty history</string>
    <string name="goal_not_found">Goal not found</string>
    <string name="no_goal_error">Please set a goal before adding steps.</string>
    <string name="no_goals_error">There are no goals to select from</string>
    <string name="add_steps">Add Steps</string>
    <string name="how_many_steps">No. of steps</string>

    <!-- Settings -->
    <string name="clear_history_title">Clear History</string>

    <!-- OK and Cancel -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="steps_per_metre">Steps per Metre</string>
    <string name="progress">Progress</string>
    <string name="range_error_message">The end date must be after the start date</string>
    <string name="goal_filter">Goal filter</string>
    <string name="active_goal_message">You cannot modify active goal</string>

</resources>
